# proforma-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ARGUS_FEATURE_CHECKLIST.md
src/proforma_engine/: __init__.py  cashflow.py  dcf.py  debt.py  lease.py  property.py
tests/: test_cashflow.py  test_dcf.py  test_debt.py  test_lease.py
validation/: ai1_reconciliation.py
