[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proforma-engine"
version = "0.0.1"
description = "Open-source commercial real estate underwriting — lease-level cash flow modeling on top of rangekeeper"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Austin Anfinson" }]
keywords = ["commercial-real-estate", "cre", "underwriting", "dcf", "argus", "cash-flow", "rent-roll"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "rangekeeper>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/aanfinson00/proforma-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/proforma_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
